fixed alignment

--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -1787,7 +1787,7 @@
   flex-direction: column;
   margin-top: .625rem;
   align-items: center;
-  align-self: flex-end;
+  align-self: flex-start;
   justify-content: space-between;
 }
 .processBlue {
